# fixit-my

./: README.md
backend/: pyproject.toml  requirements.txt  schema.sql
backend/app/: main.py
backend/app/dependencies/: auth.py
backend/app/routers/: admin_auth.py  auth.py  report.py  users.py
backend/app/schemas/: admin_schema.py  report_schema.py
backend/app/services/: supabase_client.py
backend/app/utils/: action.py  badges.py  security.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  sw.ts
frontend/app/admin/: page.tsx
frontend/app/api/location/autocomplete/: route.ts
frontend/app/auth/callback/: page.tsx
frontend/app/auth/components/: AuthModal.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: DashboardHeatmap.tsx  ReportCard.tsx  ReportForm.tsx  ReportSkeleton.tsx
frontend/app/dashboard/report/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reports/[id]/: page.tsx
frontend/lib/: apiClient.ts  offlineQueue.ts
frontend/public/: manifest.json
frontend/shared/components/: ClientProviders.tsx  Footer.tsx  InstallPrompt.tsx  LocationAutocomplete.tsx  MobileBottomNav.tsx  Modal.tsx  NavBar.tsx  NavBarPrivate.tsx  NavBarPublic.tsx  OfflineIndicator.tsx  PendingReportsBanner.tsx  QuickReportModal.tsx  SignInPromptModal.tsx
frontend/shared/components/shadcn/: dialog.tsx
frontend/shared/context/: AuthContext.tsx  PointsToastContext.tsx
frontend/shared/hooks/: useOnlineStatus.ts
frontend/types/: comment.ts  report.ts
